# Modules/Item/Routes/api.php
@@ -18,6 +18,7 @@ Route::get('brands/business/{business_id}', 'BusinessController@getBrandByBusine
 
 Route::apiResource('categories', 'CategoryController');
 Route::get('categories/business/{business_id}', 'CategoryController@getCategoryByBusiness');
+Route::get('categories/sub-categories/{parent_category_id}', 'CategoryController@getSubCategoriesByParentID');
 
 Route::apiResource('units', 'UnitController');
 Route::get('units/business/{business_id}', 'UnitController@getUnitByBusiness');
